--- a/index.html
+++ b/index.html
@@ -70,23 +70,7 @@
       margin-top: 8px;
     }
 
-    /* AUDIO */
-    .music {
-      margin-top: 30px;
-    }
-
-    audio {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 20px;
-    }
-
-    /* COUNTDOWN */
-    .countdown {
-      font-size: 1.4em;
-      margin-top: 15px;
-      font-weight: bold;
-    }
+  
 
     footer {
       margin-top: 40px;
@@ -100,44 +84,30 @@
   <p>You make the world brighter just by being you 💕</p>
 
   <div class="card">
-    <h2>Countdown to Your Special Day 🎉</h2>
+    <h2>It is Your Special Day 🎉</h2>
     <div class="countdown" id="birthday"></div>
 
     <!-- POLAROID PHOTOS -->
     <div class="photos">
       <div class="polaroid">
-        <img src="pic1.jpg" alt="Memory 1">
+        <img src="IMAGE 1.jpg" alt="Memory 1">
         <div class="caption">Beautiful You 💖</div>
       </div>
 
       <div class="polaroid">
-        <img src="pic2.jpg" alt="Memory 2">
+        <img src="IMAGE 2.jpg" alt="Memory 2">
         <div class="caption">Best Memories ✨</div>
       </div>
 
-      <div class="polaroid">
-        <img src="pic3.jpg" alt="Memory 3">
-        <div class="caption">Forever Loved 🎀</div>
-      </div>
-    </div>
 
-    <!-- MUSIC -->
-    <div class="music">
-      <h3>🎵 A Song Just for You</h3>
-      <audio controls>
-        <source src="song.mp3" type="audio/mpeg">
-        Your browser does not support audio.
-      </audio>
-    </div>
-  </div>
 
   <footer>
-    Made with love by your sister 💗
+    💗 Made with love by your sister 💗
   </footer>
 
   <script>
     // 🎯 CHANGE HER BIRTHDAY DATE HERE
-    const birthday = new Date("2026-02-15 00:00:00").getTime();
+    const birthday = new Date("2026-01-31 00:00:00").getTime();
 
     setInterval(() => {
       const now = new Date().getTime();
